syntax = "proto3";

package common.v1; // Package name for the .proto definitions

// ** CRITICAL: Update this go_package option **
// It should be: <your_product_service_module_path>/proto/v1/common;commonpb
// Based on your repo: "github.com/Nurlybek1-cpu/product-catalog-service/proto/v1/common;commonpb"
option go_package = "product-catalog-service/proto/v1/common;commonpb";

import "google/protobuf/timestamp.proto";

// Standard error response structure
message ErrorResponse {
  int32 code = 1;
  string message = 2;
}

// Request message for pagination
message PageInfoRequest {
  int32 page_size = 1;
  string page_token = 2;
}

// Response message for pagination
message PageInfoResponse {
  string next_page_token = 1;
  int32 total_size = 2;
}

// Represents an empty request or response.
message Empty {}

// Represents a request with a single ID.
message IdRequest {
  int64 id = 1;
}

// Represents a response indicating success.
message SuccessResponse {
  bool success = 1;
  optional string message = 2;
}
